--- a/HFC/SistemasUNIX/apuntes/06_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/06_08_2024.md
@@ -1,3 +1,4 @@
+[<- Volver](../../HackingFightClub.md)
 # Introducción a sistemas tipo UNIX
 
 ## Evaluación
@@ -236,3 +237,7 @@ Algunos comandos útiles que debo tener en cuenta
 
 - `tee` comando que redirige el STDOUT a un archivo y a la terminal
 - `|`: Redirige la salida de un comando a la entrada de la siguiente (izq a der)
+
+## Enlaces
+
+[Siguiente ->](07_08_2024.md)
