Repositorio reorganizado con las nuevas materias

--- a/AnalisisAlgoritmos/apuntes/AA06_08_2024.md
+++ b/AnalisisAlgoritmos/apuntes/AA06_08_2024.md
@@ -1,3 +1,4 @@
+[<- Volver](../AnalisisAlgoritmos.md)
 # Solución de problemas
 
 El primer paso siempre es ==entender el problema==.
@@ -47,7 +48,7 @@ def maxrec(a):
 
 ## Teorema
 
-La función maximo, es un algoritmo que resuelve correctamente el problema [[AnalisisAlgoritmos/apuntes/06_08_2024#Problema _Máximo_|Máximo]].
+La función maximo, es un algoritmo que resuelve correctamente el problema [[AA06_08_2024#Problema _Máximo_|Máximo]].
 
 #### Idea: demostrar el siguiente invariante en las iteraciones del ciclo `for` del algoritmo.
 
@@ -72,3 +73,7 @@ Hay 2 casos:
 Entonces, por hipotesis de inducción y definición de máximo: `acc` es mayor o igual que todos los elementos del prefijo anterior, aunado al hecho de que es mayor o igual al unico elemento del prefijo actual (_k+1_), que no está en el prefijo anterior, entonces se implica que `acc` es mayor o igual que todos los elementos del prefijo actual. Además, por hipótesis de inducción y definición de máximo, el valor de `acc` existe en el prefijo anterior, por lo tanto existe en el prefijo actual.
 
 Por tanto, queda demostrado el invariante del ciclo. Y de esta manera, podemos probar que el algoritmo es correcto ya que este invariante, aplica también para el prefijo total, es decir, la entrada total del problema.
+
+# Enlaces
+
+[Siguiente ->](AA07_08_2024.md)
