--- a/AnalisisAlgoritmos/apuntes/AA07_08_2024.md
+++ b/AnalisisAlgoritmos/apuntes/AA07_08_2024.md
@@ -1,6 +1,7 @@
+[<- Volver](../AnalisisAlgoritmos.md)
 ## Demostración para el ejemplo recursivo
 
-Ver: [[AnalisisAlgoritmos/apuntes/06_08_2024#Ejemplo de solución recursiva|Solución recursiva planteada anteriormente]]
+Ver: [[AA06_08_2024#Ejemplo de solución recursiva|Solución recursiva planteada anteriormente]]
 
 ### Teorema
 
@@ -25,3 +26,7 @@ El algoritmo es correcto para todas las entradas de tamaño *k*.
 
 En este caso se ejecuta la segunda parte de la función, en `v0` se guarda el valor del primer elemento, y en `maxresto` se guarda el valor obtenido al llamar a la función con el resto de elementos.
 El resto de elementos es una secuencia de longitud *k*, por lo tanto aplica la hipotesis de inducción y se sigue que en `maxresto` se guarda el valor del elemento máximo del resto de la secuencia.
+
+# Enlaces
+
+[<- Volver](AA06_08_2024.md)
