--- a/HFC/SistemasUNIX/apuntes/HFC06_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC06_08_2024.md
@@ -240,4 +240,4 @@ Algunos comandos útiles que debo tener en cuenta
 
 ## Enlaces
 
-[Siguiente ->](07_08_2024.md)
+[Siguiente ->](HFC07_08_2024.md)
