08/08/2024 | Falta apuntes del HFC

--- a/HFC/SistemasUNIX/apuntes/HFC07_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC07_08_2024.md
@@ -190,3 +190,23 @@ Un ejemplo de una línea de este archivo sería:
 
 - `sudo userdel nombre_usuario`
 - `sudo userdel -r nombre_usuario # Elimina usuario y su directorio home`
+
+## Grupos
+
+El concepto de grupos facilita la administración de permisos de archivos y la gestión de recursos compartidos.
+
+**Grupo primario**: Cada usuario pertenece a un grupo primario, que se define al momento de crear el usuario. Este grupo está especificado en el archivo `/etc/passwd`.
+
+**Grupo secundario**: Además del grupo primario, un usuario puede pertenecer a varios grupos secundarios. Estos se listan en el archivo `/etc/group`.
+
+### Archivos de configuración importantes
+
+`/etc/group`: Este archivo contiene información sobre los grupos del sistema. Cada línea representa un grupo e incluye el nombre del grupo, la contraseña del grupo (generalmente no utilizada), el GID (Group ID) y una lista de usuarios que pertenecen al grupo.
+
+> `nombre_grupo:x:GID:usuario1,usuario2,usuario3`
+
+### Comandos de utilidad
+
+- `groupadd` o `addgroup`: Añade grupos al sistema
+- `groupmod`: Modifica los atributos del grupo
+- `groupdel`o `delgroup`: Elimina un grupo del sistema
