Ahora si todo de hoy, menos IA

--- a/HFC/SistemasUNIX/apuntes/HFC07_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC07_08_2024.md
@@ -210,3 +210,7 @@ El concepto de grupos facilita la administración de permisos de archivos y la g
 - `groupadd` o `addgroup`: Añade grupos al sistema
 - `groupmod`: Modifica los atributos del grupo
 - `groupdel`o `delgroup`: Elimina un grupo del sistema
+
+# Enlaces
+
+[<- Anterior](HFC06_08_2024.md) | [Siguiente ->](HFC08_08_2024.md)
