--- a/HFC/SistemasUNIX/apuntes/HFC08_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC08_08_2024.md
@@ -102,11 +102,48 @@ Existen 2 maneras principales de usar `chmod`:
 
 #### Notación simbólica
 
-#### Notación numérica
+La notación simbólica permite cambiar permisos utilizando letras y signos.
+La estructura básica es `[ugoa][+-=][rwx]`.
+
+- **u**: Propietario (usuario)
+- **g**: Grupo
+- **o**: Otros
+- **a**: Todos (Propietario, grupo y otros)
+- **+**: Añadir permisos
+- **-**: Quitar permisos
+- **=**: Establecer permisos exactamente
+- **r**: Lectura
+- **w**: Escritura
+- **x**: Ejecución
+
+#### Notación numérica o absoluta
+
+La notación numérica consiste en `chmod nnn [objetivo]`, donde n es una cifra entre 0 y 7, que corresponde a:
+
+| Número | Representación                 | Referencia |
+| ------ | ------------------------------ | ---------- |
+| 0      | Sin permisos                   | ---        |
+| 1      | Ejecución                      | --x        |
+| 2      | Escritura                      | -w-        |
+| 3      | Ejecución y Escritura          | -wx        |
+| 4      | Lectura                        | r--        |
+| 5      | Lectura y ejecución            | r-x        |
+| 6      | Lectura y Escritura            | rw-        |
+| 7      | Lectura, Escritura y Ejecución | rwx        |
 
 ### Cambiar el dueño y grupo de un archivo
 
-El dueño usualmente tiene 
+El dueño usualmente tiene más permisos para manipular el archivo que cualquier otro usuario.
+Algunas veces es necesario cambiar el dueño de un archivo, para eso existe el comando `chown` (*change owner).
+
+`chown [newOwner] [file]`
+
+Solo el dueño del archivo y *root* pueden usar `chown` para cambiar el dueño.
+
+EL comando `chgrp` recibe 2 argumentos, el nombre del nuevo grupo y el nombre del archivo.
+Solo el dueño dela archivo y root pueden usar `chgrp` para cambiar de grupo al archivo.
+
+`chgrp [newGroup] [file]`
 
 ## Variables de entorno
 
@@ -124,3 +161,7 @@ Dependiendo del estado de su sistema, el conjunto puede imprimir muchas más lin
 La dirección MAC es un identificador que tienen las interfaces de red de fábrica, es única y no se pueden cambiar.
 
 La dirección IP se asigna cuando accedes a una red.
+
+# Enlaces
+
+[<- Anterior](HFC07_08_2024.md) |
