Actualizado HFC07_08_2024 en celular

--- a/HFC/SistemasUNIX/apuntes/HFC07_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC07_08_2024.md
@@ -1,4 +1,4 @@
-[<- Volver](../../HackingFightClub.md)
+[<- Volver](../SistemasUNIX.md)
 ## Instalación, actualización y eliminación de software
 
 En distribuciones basadas en *Debian*, el administrador de *software* predeterminado es **apt** (por sus siglas en inglés *Advanced Packaging Tool*).
