HFC: Notas 08/08/2024 actualizadas, aun faltan pendientes

--- a/HFC/SistemasUNIX/apuntes/HFC08_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC08_08_2024.md
@@ -147,10 +147,109 @@ Solo el dueño dela archivo y root pueden usar `chgrp` para cambiar de grupo al 
 
 ## Variables de entorno
 
-Las variables de entorno son simplemente figuras nombradas que tienen valores específicos y son entendidas por el *shell* de comandos.
+Las variables de entorno son simplemente figuras nombradas (*variables*) que tienen valores específicos y son entendidas por el *shell* de comandos, como *bash*.
+Algunos de estos son preestablecidos (*integrados*) por el sistema, y otros establecidos por el usuario, ya sea en la línea de comandos o dentro del inicio y otros scripts.
+Una **variable de entorno** en realidad no es más que una cadena de caracteres que contiene información utilizada por una o más aplicaciones.
 
 Hay varias formas de ver los valores de las variables de entorno establecidas actualmente; se puede escribir `set`, `env` (para ver las variables de entorno) y `export`(para hacer modificaciones de variables de entorno).
 Dependiendo del estado de su sistema, el conjunto puede imprimir muchas más lineas que los otros métodos.
+
+De forma predeterminada, las variables creadas dentro de un *script* sólo están disponibles para el shell actual; los procesos secundarios (*subshells*) no tendrán acceso a los valores que se hayan establecido o modificado.
+Permitir que los procesos secundarios vean los valores requiere el uso del comando de exportación.
+
+**Para mostrar el valor de una variable específica**: `echo $SHELL`.
+
+**Exportar un nuevo valor de variable**: `export VARIABLE=value` (o `VARIABLE=value; export VARIABLE)
+
+**Agregar una variable permanentemente**:
+1. Edita `~/.bashrc` y agrega la línea `export VARIABLE=value`
+2. Escribe en terminal el comando `source .bashrc` o `~/.bashrc (dot ~/.bashrc);` o arbe una nueva shell escribiendo el comando `bash`.
+
+### Variable HOME
+
+*HOME* es una variable de entorno que representa el directorio principal del usuario.
+
+> `cd` sin argumentos, cambiará el directorio de trabajo actual al valor de $HOME.
+ 
+Tengamos en cuenta que el caracter '*~*' se usa a menudo como abreviatura de $HOME.
+Por lo tanto, `cd $HOME` y `cd ~` son declaraciones completamente equivalentes.
+
+### Variable PATH
+
+*PATH* es una lista ordenada de directorios (rutas) que se escanea cuando se da un comando para encontrar el programa o *script* apropiado para ejecutar. Cada directorio de la variable *PATH* está separado por 2 puntos (:). Un nombre de directorio nulo o vacío (./) indica el directorio actual en un momento dado.
+
+- `:path1:path2`
+- `path1::path2`
+
+En el primer ejemplo, hay un directorio nulo antes de los primeros 2 puntos (:).
+Del mismo modo, para el segundo ejemplo, hay un directorio nulo entre `path1`y `path2`.
+
+Para prefijar un directorio bin privados a su ruta:
+
+1. `export PATH=$HOME/bin:$PATH
+
+Modificar la variable *PATH* es una práctica común en la administración de sistemas y el desarrollo de *software* por varias razones.
+
+Si tienes scripts, programas o herramientas que has creado o descargado y que están ubicados en directorios específicos dentro de tu directorio personal (como ~/bin o ~/scripts), puedes añadir estos directorios al PATH.
+
+Esto permite que puedas ejecutar estos programas desde cualquier lugar sin tener que escribir la ruta completa.
+
+### Variable SHELL
+
+La variable de entorno $SHELL apunta al shell de comandos predeterminado del usuario (el programa que interpreta lo que sea que se escriba en una ventana de comandos, generalmente *bash*) y contiene el nombre completo de la ruta de acceso al *shell*.
+
+`$ echo $SHELL`
+
+`/bin/bash`
+
+### Variables de historial
+
+- `$HISTFILE`: Almacena la ubicación del archivo del historial
+- `$HISTFILESIZE`: Almacena el número máximo de líneas en el archivo del historial
+- `$HISTSIZE`: Almacena el número máximo de líneas en el archivo de historial para la sesión actual
+
+## Atajos con el teclado de la terminal
+
+| Atajo      | Función                                                                                       |
+| ---------- | --------------------------------------------------------------------------------------------- |
+| **CTRL-L** | Limpia la pantalla                                                                            |
+| **CTRL-D** | Sale de la shell actual                                                                       |
+| **CTRL-Z** | Pone el proceso actual en segundo plano                                                       |
+| **CTRL-C** | Mata el proceso actual                                                                        |
+| **CTRL-H** | Funciona igual que la tecla *backspace* o borrar                                              |
+| **CTRL-A** | Para ir al inicio de la línea                                                                 |
+| **CTRL-W** | Elimina la palabra antes del cursor                                                           |
+| **CTRL-U** | Elimina desde el principio de la línea hasta la posición del cursor (o elimina toda la línea) |
+| **CTRL-E** | Para ir al final de la línea                                                                  |
+| **Tab**    | Autocompleta archivos directorios y binarios                                                  |
+
+## Alias
+
+### Creas alias
+
+Puedes crear comandos personalizados o modificar el comportamiento de los ya existentes creando alias. La mayoría de las veces, estos *alias* se colocan en su archivo `~/.bashrc` para que esten disponibles para cualquier *shell* de comandos que se crea.
+
+Escribir alias sin argumentos enumerará los alias definidos actualmente.
+
+Tenga en cuenta que no debe de haber ningún espacio a ningún lado del signo igual y que la definición de alias debe colocarse entre comillas simples o dobles si contiene algún espacio. Sintaxis:
+
+`alias [nombre_alias]='comandoPorEjecutar'`
+
+Sin embargo, estos alias son únicamente temporales.
+
+### Alias permanentes
+
+Para hacer que un *alias* sea permanente (es decir, que esté disponible cada vez que abras una nueva terminal), debes agregarlo al archivo de configuración de tu *shell*.
+
+1. **Abrir el archivo de configuración de tu shell**: `vim ~/.bashrc`
+2. **Agregar el alias**: Al final del archivo, agrega la línea con tu alias (`alias ll=ls -al`)
+3. **Guardar y cerrar el archivo**
+4. **Recargar el archivo de configuración**: `source ~/.bashrc` o simplemente cierra y abre la terminal
+
+---
+
+**Ver los Alias existentes**: `alias`
+**Eliminar un alias**: `unalias nombre_alias`
 
 ## Operaciones de redes
 
@@ -161,6 +260,8 @@ Dependiendo del estado de su sistema, el conjunto puede imprimir muchas más lin
 La dirección MAC es un identificador que tienen las interfaces de red de fábrica, es única y no se pueden cambiar.
 
 La dirección IP se asigna cuando accedes a una red.
+
+### Secure Shell (SSH)
 
 # Enlaces
 
