HFC: Más notas actualizas, aun falta más de Shell Scripting

--- a/HFC/SistemasUNIX/apuntes/HFC07_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC07_08_2024.md
@@ -1,4 +1,5 @@
 [<- Volver](../SistemasUNIX.md)
+# Dia 2
 ## Instalación, actualización y eliminación de software
 
 En distribuciones basadas en *Debian*, el administrador de *software* predeterminado es **apt** (por sus siglas en inglés *Advanced Packaging Tool*).
