--- a/HFC/SistemasUNIX/apuntes/HFC08_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC08_08_2024.md
@@ -1,5 +1,6 @@
 [<- Volver](../SistemasUNIX.md)
 
+# Dia 3
 ## Contraseñas
 
 A pesar de que un *login name* es único, no es confidencial y cualquier persona puede saberlo.
@@ -21,7 +22,7 @@ El archivo `/etc/shadow` almacena las contraseñas cifradas de las cuentas de us
 7. **Periodo de inactividad**: Número de días después de la expiración de la contraseña en que se deshabilitará la cuenta
 8. **Fecha de expiración de la cuenta**: Número de dias trasncurridos desde el 1 de enero de 1970 hasta la fecha en que la cuenta expirará
 
-## Politica de SUDO
+## Política de SUDO
 
 - *SUDO* permite a un usuario ejecutar comandos individuales con privilegios adicionales
 - Es necesario que el usuario introduzca su contraseña para poder ejecutar dichos comandos
@@ -255,14 +256,22 @@ Para hacer que un *alias* sea permanente (es decir, que esté disponible cada ve
 
 ### ¿Qué es una red?
 
+Una red, en computación, se refiere a varios dispositivos interconectados que pueden intercambiar datos y compartir recursos entre sí.
+Los dispositivos de la red utilizan un sistema de reglas, llamados protocolos de comunicaciones, para transmitir información a través de tecnologías físicas o inalámbricas.
+
 ### Dirección IP y MAC
 
-La dirección MAC es un identificador que tienen las interfaces de red de fábrica, es única y no se pueden cambiar.
+La dirección MAC es un identificador que tienen las **interfaces de red** de fábrica, es única y no se pueden cambiar.
 
-La dirección IP se asigna cuando accedes a una red.
+La dirección IP se asigna cuando accedes a una red y varía cuando entre las distintas redes a las que te conectes.
 
 ### Secure Shell (SSH)
 
+Es un protocolo de administración remota que le permite a los usuarios conectarse, controlar y modificar sus servidores remótos a través de Internet de manera segura, gracias a un mecanismo de autentificación.
+
+*SSH* es seguro porque incorpora encriptación y autenticación mediante un proceso llamado criptografía de clave pública.
+En una conexión *SSH*, ambas partes tiene un par de claves (publica/privada) y cada parte autentica a la otra utilizando dichas claves.
+
 # Enlaces
 
-[<- Anterior](HFC07_08_2024.md) |
+[<- Anterior](HFC07_08_2024.md) | [Siguiente ->](HFC09_08_2024.md)
