--- a/HFC/SistemasUNIX/apuntes/HFC09_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC09_08_2024.md
@@ -1,3 +1,6 @@
+[<- Volver](../SistemasUNIX.md)
+
+# Dia 4
 ## Grep, sed y AWK
 
 `grep`, `sed` y `AWK` son todas herramientas de estándar de Linux que son capaces de procesar texto.
@@ -48,14 +51,13 @@ Los principales casos de uso de *AWK* son los siguientes:
 - Comparaciones numéricas y cálculos
 - Modificación de datos basados en cálculos.
 
-## Bash Scripting
+## Shell Scripting
 
 ### Atajos útiles
 
 - **!!**: Ejecuta el último comando usado
 - **!n**: Ejecuta el n-avo comando del historial
-- **!\[comando\]**: Ejecuta el comando dado con las banderas con las que lo ejecutaste la última vez
-- Control-r ejecuta una busqueda inversa en la terminal
+- **!comando**: Ejecuta el comando dado con las banderas con las que lo ejecutaste la última vez
 
 ### Códigos de salida de comandos
 
@@ -79,4 +81,50 @@ Los códigos son:
 - **||** : Ejecuta comandos de forma secuencial, únicamente si el primer comando falla
 - **!** : Niega la salida del comando, funciona como una excepción
 
-Para hacer interpretaciónes numéricas hay que...
+## Global extended (extglob)
+
+La terminal puede incorporar extensiones de patrones más poderosas si se activa dicha opción, por ejemplo, `ls ^*.txt` o `ls !(*.txt)` para `zsh` y `bash` respectivamente, cuyas funciones es listar todos los archivos (y directorios) que no terminan en extensión `.txt`, es decir, niega el patrón dado.
+
+Para activar esta función se hace de la siguiente manera:
+
+- **zsh**: `setopt extendglob` para encendarla y `setopt noextendedglob` para apagarla
+- **bash**: `shopt -s extglob` para encenderla y `shopt -u extglob` para apagarla
+
+Anexo un artículo muy completo acerca de las extensiones en *zsh* que encontre investigando sobre el tema, brinda distintos ejemplos acerca de las extensiones y comandos equivalentes a los comandos con extensiones, de manera que podamos compararlos.
+
+#### [Artículo Zsh expansions](https://thevaluable.dev/zsh-expansion-guide-example/)
+
+### Brace Expansion (Expansión de llaves)
+
+Las *shells* permiten el uso de la expansión de llaves para crear varias de cadenas de 2 formas distintas:
+
+De caracteres:
+
+```bash
+$ echo pre{X,Y[,Z...]}post
+	# preXpost preYpost ...
+```
+
+De una serie de números de *n* a *m* con incremento *k*
+
+```bash
+$ echo pre{n..m[..k]}post
+	# prenpost pre(n+k)post ... prempost
+```
+
+### Quoting (citas)
+
+Las *citas* desactivan el significado reservado de algunos caracteres y permite que lo usemos literalmente. Los siguientes caracteres pueden ser usados para citar:
+
+- **" "** : Todo lo que este entre estas comillas será interpretado literalmente, a excepción de los siguientes caracteres.
+	- **$**: Para variables o sustituciones aritmeticas o de comandos
+	- **\`** : Sustitución de comandos
+	- **"** : Ya que marca el final de la cadena entre comillas dobles
+- **' '** : Todo lo que esté entre comillas simples es interpretado literalmente, solo exceptuando **'** ya que este indica el final del texto citado.
+- **\\** : El caracter siguiente a este, es tomado literalmente. Se utiliza dentro de comillas dobles (**" "**) para escapar los caracteres especiales enunciados anteriormente en su sección (**$**, **\`**, **"**).
+- **$" "** : Funciona similar a **" "**, solo que se realiza traduccion del "*locale*" definido en tu computadora (me atrapaste no entendí)
+- **$' '*** : Similar a **' '**, pero la cadena permites escapes con **\\**.
+
+# Enlaces
+
+[<- Anterior](HFC08_08_2024.md) |
