HFC: Apuntes completamente actualizados

--- a/HFC/SistemasUNIX/apuntes/HFC08_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC08_08_2024.md
@@ -215,7 +215,7 @@ La variable de entorno $SHELL apunta al shell de comandos predeterminado del usu
 | ---------- | --------------------------------------------------------------------------------------------- |
 | **CTRL-L** | Limpia la pantalla                                                                            |
 | **CTRL-D** | Sale de la shell actual                                                                       |
-| **CTRL-Z** | Pone el proceso actual en segundo plano                                                       |
+| **CTRL-Z** | Suspende el proceso actual                                                                    |
 | **CTRL-C** | Mata el proceso actual                                                                        |
 | **CTRL-H** | Funciona igual que la tecla *backspace* o borrar                                              |
 | **CTRL-A** | Para ir al inicio de la línea                                                                 |
