--- a/HFC/SistemasUNIX/apuntes/HFC09_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC09_08_2024.md
@@ -127,4 +127,4 @@ Las *citas* desactivan el significado reservado de algunos caracteres y permite 
 
 # Enlaces
 
-[<- Anterior](HFC08_08_2024.md) |
+[<- Anterior](HFC08_08_2024.md) | [Siguiente ->](HFC12_08_2024.md)
