Lenguajes: Notas actualizadas (falta completar de las notas) | Analisis Reestructurado | HFC apuntes dispersos

--- a/HFC/RedesComputadora/apuntes/HFC19_08_2024.md
+++ b/HFC/RedesComputadora/apuntes/HFC19_08_2024.md
@@ -86,17 +86,19 @@ Se usan estos clases porque corresponden a *Unicast*
 
 ### Direcciones IP especiales
 
-| Rango           | Descripción                    |
-| --------------- | ------------------------------ |
-| 0.0.0.0/8       | Red actual en uso. Wildcards   |
-| 100.64.0.0/10   | *Shared Adress Space* (*IANA*) |
-| 127.0.0.0/8     | Loopback                       |
-| 169.254.0.0/24  | Link-Local (*APIPA*)           |
-| 192.0.2.0/24    | TEST-NET-1                     |
-| 192.88.99.0/24  | IPv6 to IPv4 Relay             |
-| 224.0.0.0/4     | IP *Multicast* (Clase D)       |
-| 240.0.0.0/4     | Reserved (Clase E)             |
-| 255.255.255.255 | *BroadCast*                    |
+| Rango           | Descripción                      |
+| --------------- | -------------------------------- |
+| 0.0.0.0/8       | Red actual en uso. Wildcards^[1] |
+| 100.64.0.0/10   | *Shared Adress Space* (*IANA*)   |
+| 127.0.0.0/8     | Loopback                         |
+| 169.254.0.0/24  | Link-Local (*APIPA*)             |
+| 192.0.2.0/24    | TEST-NET-1                       |
+| 192.88.99.0/24  | IPv6 to IPv4 Relay               |
+| 224.0.0.0/4     | IP *Multicast* (Clase D)         |
+| 240.0.0.0/4     | Reserved (Clase E)               |
+| 255.255.255.255 | *BroadCast*                      |
+
+[1]: Se utiliza para filtrado de redes
 
 ### Ejercicio IP pública, privada, especial
 
@@ -118,7 +120,6 @@ El ICMP se utiliza principalmente para determinar si los datos llegan a su desti
 La interfaz que nos permite salir a Internet, generalmente es una interfaz que está dentro del router.
 
 ### Tabla de enrutamiento
-
 
 
 # Enlace
