Avanzando apuntes de Analisis | Links funcionales de HFC

--- a/HFC/SistemasWindows/apuntes/HFC26_08_2024.md
+++ b/HFC/SistemasWindows/apuntes/HFC26_08_2024.md
@@ -1,3 +1,4 @@
+[<- Índice](../SistemasWindows.md)
 # Introducción a Sistemas Windows
 
 ## Agenda
@@ -103,3 +104,7 @@ Estructura lógica y Estructura física
 **OUs**:
 **Trees**:
 **Forest**:
+
+# Enlaces
+
+[Siguiente ->](HFC28_08_2024.md)
