--- a/HFC/SistemasWindows/apuntes/HFC28_08_2024.md
+++ b/HFC/SistemasWindows/apuntes/HFC28_08_2024.md
@@ -1,4 +1,4 @@
-
+[<- Índice](../SistemasWindows.md)
 ### ¿Por qué implmentar varios dominios?
 
 - **Replicación de datos**: Si se tienen muchos recursos y se necesitan distribuir
@@ -23,3 +23,7 @@ Todo se almacena en un objeto y la definición de cada objeto se almacena en el 
 ## Data Store
 
 ## Trust Relationships
+
+# Enlaces
+
+[<- Anterior](HFC26_08_2024.md) | [Siguiente ->](HFC29_08_2024.md)
