--- a/HFC/SistemasWindows/apuntes/HFC29_08_2024.md
+++ b/HFC/SistemasWindows/apuntes/HFC29_08_2024.md
@@ -1,3 +1,4 @@
+[<- Índice](../SistemasWindows.md)
 ## Cubo de la ciberseguridad
 #### Datos en proceso
 Se refiere a los datos pasando por una manipulación **local** de los datos
@@ -68,3 +69,7 @@ Active Directory utiliza otros métodos de autentificación. Entre ellos se incl
 Basic solo envia las credenciales en base64 al controlador de dominio.
 
 Digest es exactamente lo mismo que **Basic** pero con MD5.
+
+# Enlaces
+
+[<- Anterior](HFC28_08_2024.md) | [Siguiente ->](HFC30_08_2024.md)
