Distribuida: Apuntes hasta Metricas | Analisis: Apuntes hasta Divide y Venceras

--- a/HFC/SistemasWindows/apuntes/HFC26_08_2024.md
+++ b/HFC/SistemasWindows/apuntes/HFC26_08_2024.md
@@ -11,7 +11,14 @@
 ## Introducción AD
 
 *Active Directory (AD)* es un **servicio de directorio para entornos de red de Windows**.
+
 Es una **estructura jerárquica distribuida** que permite la administración centralizada de los recursos de una organización.
+
+> Es una herramienta fundamental en la administración de redes basadas en *Windows*.
+
+Ofrece herramientas fundamentales como:
+
+- **Gestion de Identidades y Accesos**: Permite almacenar
 
 ### AD y las empresas
 
