Modulo de Python completo y apuntes de lenguajes

--- a/HFC/Python/apuntes/HFC05_09_2024.md
+++ b/HFC/Python/apuntes/HFC05_09_2024.md
@@ -3,46 +3,80 @@
 
 ### Listas
 
-Pueden almacenar elementos de diversos tipos de datos
+> Estructura mutable que almacena cualquier tipo de dato
 
-No tienen un tamaño definido, crecen y decrecen dependiendo de los elementos que contiene
-
-Se inicializan con corchetes
-
-Son mutables, pues pueden cambiar los elementos contenidos
-
-Sde pueden operar con **slices**.
+- Pueden almacenar elementos de diversos tipos de datos
+- No tienen un tamaño definido, crecen y decrecen dependiendo de los elementos que contiene
+- Se inicializan con corchetes
+- Son mutables, pues pueden cambiar los elementos contenidos
+- Se pueden operar con **slices**.
 
 ### Tuplas
 
-Pueden almacenar 
+> Estructura no mutable que almacena cualquier tipo de dato
+
+- Pueden almacenar elementos de diversos tipos de datos
+- Tienen un tamaño definido, no se pueden modificar sus elementos una vez creada
+- Son inmutables (no se pueden agregar o quitar elementos)
+- Son más rápidas que las listas
+- Se pueden operar con **slices** también
+- Tienen casi las mismas funciones que las listas (**excepto las que involucran mutabilidad**)
+
+```python
+tupla_vacia = ()
+tupla1 = 0,1,2,3 # := (1,2,3,4): Se pueden declarar sin los parentesis, como una sucesión
+tupla2 = (4,5,6,7)
+tupla1[1]=8 # -> Error: Las tuplas no son mutables
+tupla1.append(8) # -> Error
+```
+
+Sin embargo, las tuplas pueden sumarse y obtener una tupla más grande:
+
+```python
+tupla1 = 0,1,2,3
+tupla2 = (4,5,6,7)
+
+tupla3 = tupla1 + tupla2 # -> (0,1,2,3,4,5,6,7)
+tupla4 = tupla2 + (8,) # Asi se suma una tupla de un solo elemento
+```
 
 ### Conjuntos
 
 > Estructura que solo puede contener elementos no mutables.
 
-Se inicializan con corchetes ({ })
+- Se inicializan con corchetes ({ }) (o con el constructor `set()` para evitar ambigüedades con un diccionariok)
+- No soportan indexado ni **slices**
+- No puede tener elementos repetidos
+- Buscar elementos en un conjunto es más rápido que hacerlo en una lista
 
-No soportan indexado ni **slices**
+```python
+conj_vacio = set() # Se usa el constructor porque si no Python asume que es un diccionario
 
-No puede tener elementos repetidos
-
-Buscar elementos en un conjunto es más rápido que hacerlo en una lista
+conj1 = set([0,1,2,3])
+conj2 = {4,5,6,7}
+```
 
 #### Funciones:
 
-- `len(s)`: Número de elementos
-- `x in s`: Revisa si `x` pertenece al conjunto `s`
-- `x not in s`: Revisa si `x` no pertenece al conjunto `s`
-%% Faltan %%
+| Operación                   | Equivalente<br>(Abreviación) | Resultado                                                                    |
+| --------------------------- | ---------------------------- | ---------------------------------------------------------------------------- |
+| `len(conj)`                 | -                            | Número de elementos de `conj`                                                |
+| `x in conj`                 | -                            | Revisa si `x` pertenece a `conj`                                             |
+| `x not in conj`             | -                            | Revisa si `x` no pertenece a `conj`                                          |
+| `s.issubset(t)`             | `s <= t`                     | Revisa si todos los elementos de `s` están en `t`                            |
+| `s.issuperset(t)`           | `s >= t`                     | Revisa si todos los elementos de `t` están es `s`                            |
+| `s.union(t)`                | `s`\|`t`                     | Devuelve un nuevo conjunto con los elementos de `s` y `t`                    |
+| `s.intersection(t)`         | `s & t`                      | Devuelve un nuevo conjunto con los elementos en común de `s` y `t`           |
+| `s.difference(t)`           | `s - t`                      | Devuelve un nuevo conjunto con los elementos de `s` y no de `t`              |
+| `s.symmetric_difference(t)` | `s ^ t`                      | Nuevo conjunto con los elementos de `s`  y `t`, que no sean comunes en ambos |
 
 ### Diccionarios
 
 > Estructura que permite mapear claves a valores
 
-Las claves deben ser elementos no mutables (números, cadenas, tuplas)
+- Las claves deben ser elementos no mutables (números, cadenas, tuplas)
 
-Se puede acceder al valor usando la clave
+- Se puede acceder al valor usando la clave
 
 ```python
 dic_vacio = {}
@@ -50,3 +84,188 @@ dic1 = {'Pedro':58, 'Juan':34, 'Jose':40}
 dic1['Pedro'] # -> 58
 ```
 
+# Programación orientada a objetos
+
+Es un paradigma popularizado en la década de los 90s
+
+### Clases y objetos
+
+> Una clase define lo que será un objeto (Es como un molde de objetos).
+
+Define los **atributos** (==características==) y **métodos** (==acciones==) que tienen los objetos.
+
+Se definen usando la palabra reservada `class`.
+
+```python
+# Definición de la clase Alumno
+class Alumno:
+	def __init__(self, nombre, calificacion):
+		self.nombre = nombre
+		self.calificacion = calificacion
+
+	def ve_calificacion(self):
+		if self.calificacion < 8: print('Debo estudiar más')
+		else: print('Aun debo estudiar mucho')
+
+# Creación de los objetos
+b1 = Alumno('Ulises', 9)
+b2 = Alumno('Antonio', 7)
+b3 = Alumno('Itzel', 8)
+```
+
+**Nota:** Como se observa en el ejemplo, todos los métodos de POO en *Python* reciben el objeto ==autoreferencia== `self`, que representa el objeto desde el que se llamó el método.
+
+Esto se hace así porque el código usual de POO que escribimos, por ejemplo:
+
+```python
+# a1 = Alumno('Ulises',9)
+a1.ve_calificacion()
+```
+
+Es realmente interpretado por *Python* de una manera similar a:
+
+```python
+Alumno.ve_calificación(a1)
+```
+
+### Herencia
+
+> La **herencia** es un proceso mediante el cual se puede crear una clase **hija** que hereda los métodos y atributos de una clase **padre**.
+
+Además, una clase **hija** puede sobreescribir los métodos o atributos, o incluso definir unos nuevos.
+
+Se puede crear una clase **hija** con tan solo pasar como parámetro la clase de la que queremos heredar las características (**padre**).
+
+```python
+# Clase padre Animal
+class Animal:
+	pass # pass omite la definición de la clase (y de cualquier bloque de codigo)
+
+# Clase hija Perro
+class Perro(Animal):
+	pass
+```
+
+### Abstracción
+
+> La abstracción se enfoca en la visión "externa" de un objeto, separando el comportamiento específico de un objeto.
+
+Es decir, generalizamos un conjunto de objetos que comparten características en común, dejando a cargo de cada objeto la implementación de sus características particulares.
+
+En la práctica, usualmente establecemos una clase **padre** de un conjunto de objetos como una ==abstracción== de estos, dejando métodos **particulares** sin implementar, de modo que las clases hijas los sobreescriban de acuerdo a sus necesidades.
+
+Como se mencionó anteriormente, se omite la definición de un método con la palabra reservada `pass`.
+
+```python
+class Animal:
+	def __init__(self, edad):
+		self.edad = edad
+
+	@absttractmethod
+	def saludar():
+		pass
+
+class Perro(Animal):
+	def saludar():
+		print("Guau!")	
+
+class Gato(Animal):
+	def saludar():
+		print("Miau!")
+
+class Pato(Animal):
+	def saludar():
+		print("Cuack!")
+```
+
+### Polimorfismo
+
+> Se refiere al comportamiento distinto de los métodos según el contexto u objeto desde el que lo llamen.
+
+Por ejemplo, en el ejemplo anterior, cada clase definió bajo su caso particular el método `saludar()`.
+Entonces dependiendo de la construcción del objeto desde el que se llame el método, el método tendra un coportamiento diferente:
+
+```python
+animal = Perro()
+animal.saludar() # Guau!
+animal = Gato()
+animal.saludar() # Miau!
+```
+
+### Encapsulación
+
+> Se refiere al **ocultamiento** de los datos internos de un objeto, como **atributos** o **métodos**.
+
+Este mecanismo **protege** los datos asociados a un objeto contra su **modificación** o **acceso** inapropiados.
+
+En *Python*, esto se logra con el uso del doble guión bajo (`__`):
+
+```python
+class Clase:
+	atributoNormal = "Hola" # Accesible
+	__atributoPrivado = "Secreto" # No accesible
+
+	def metodo_normal(): # Método accesible
+		pass
+
+	def __metodo_privado(): # Método no accesible
+		pass
+```
+
+---
+# Archivos
+
+Con *Python*, se pueden manipular archivos de manera sencilla.
+
+> Los archivos se pueden abrir en modo lectura, escritura o concatenación.
+
+*Python* puede manipular archivos de texto o binarios.
+Siempre que se abra una rchivo, se debe cerrar una vez que se termina de manipular, es una **buena práctica**.
+
+## Apertura
+
+Para la apertura de archivos, se utiliza la función `open`.
+
+El **primer argumento** de la función es la ruta relativa o absoluta del archivo.
+El **segundo argumento** es el ==modo de apertura==.
+
+| Modo de apertura | Significado                                                                                      |
+| ---------------- | ------------------------------------------------------------------------------------------------ |
+| *r*              | *Lectura*: Solo se puede leer el contenido del archivo, sin modificarlo                          |
+| *w*              | *Escritura*: Reescribe el contenido del archivo (Borra el anterior contenido)                    |
+| *a*              | *Concatenación*: Permite modificar el contenido de un archivo sin eliminar el contenido anterior |
+| *r+*             | *Lectura* y *Escritura* simultánea                                                               |
+| *rb*             | *Lectura binaria*: Igual que *r* pero con archivos binarios como fotos, videos, etc.             |
+| *wb*             | *Escritura binaria*                                                                              |
+| *ab*             | *Concatenación binaria*                                                                          |
+
+### Lectura
+
+Para leer un archivo podemos usar las siguientes funciones:
+
+```python
+# Apertura del archivo
+f1 = open('archivo.txt','r')
+
+contenido = f1.read() # Devuelve un String con todo el contenido
+contenido = f1.read(10) # Lee una cantidad definida de bytes
+contenido = f1.readlines() # Devuelve un iterable con las líneas del archivo
+
+f1.close() # Importante! Cerrado del archivo
+```
+
+### Escritura
+
+```python
+# Apertura del archivo
+f1 = open('archivo.txt', 'w')
+f1.write('Hola!') # Escritura de contenido en el archivo
+
+f1.close() # Cerrado del archivo
+```
+
+Siempre se debe de cerrar un archivo que se ha abierto, incluso si se produce una excepción.
+
+# Enlaces
+
+[<- Anterior](HFC04_09_2024.md) | [Siguiente ->](HFC06_09_2024.md)
