--- a/HFC/SistemasUNIX/apuntes/HFC06_08_2024.md
+++ b/HFC/SistemasUNIX/apuntes/HFC06_08_2024.md
@@ -86,12 +86,19 @@ Es un mecanismo que te permite usar la salida de un comando o programa como la e
 
 Para entender cómo funciona UNIX, se debe entender su estructura.
 
-| Capas      |
-| ---------- |
-| Utilidades |
-| Shell      |
-| Kernel     |
-| Hardware   |
+```mermaid
+---
+title: "Capas:"
+---
+flowchart TB
+	subgraph Utilidades
+	subgraph Shell
+	subgraph Kernel
+	hw[["Hardware"]]
+	end
+	end
+	end
+```
 
 ### Hardware
 
