--- a/LenguajesProgramacion/apuntes/LP26_08_2024.md
+++ b/LenguajesProgramacion/apuntes/LP26_08_2024.md
@@ -1,5 +1,5 @@
 [<- Índice](../LenguajesProgramacion.md)
-
+# Creación de un lenguaje de Programación
 ## Lenguajes de programación involucrados
 
 - **Lenguaje objetivo**: EL que estamos implementando
@@ -36,4 +36,4 @@ Definimos las reglas de interpretación de semantica operacional
 
 # Enlaces
 
-[<- Anterior](LP23_08_2024.md) |
+[<- Anterior](LP23_08_2024.md) | [Siguiente ->](LP29_08_2024.md)
