--- a/LenguajesProgramacion/apuntes/LP30_08_2024.md
+++ b/LenguajesProgramacion/apuntes/LP30_08_2024.md
@@ -1,3 +1,4 @@
+[<- Índice](../LenguajesProgramacion.md)
 # Expresiones Let
 
 Recordemos que un algoritmo de sustitución puede representarse como una función `sustituttion` que defina las reglas de sustitución para los distintos ASAs de la sintaxis abstracta. Cabe recalcar que dicha función recibe 3 parametros:
@@ -91,3 +92,7 @@ Lo que está antes del punto se denomina ==encabezado== y lo que esta despues ==
 
 - Parametros formales: Vendría siendo la función que se va a aplicar
 - Parametros reales: Serían los **argumentos** que se van a aplicar de la función.
+
+# Enlaces
+
+[<- Anterior](LP29_08_2024.md) | [Siguiente ->](LP05_09_2024.md)
