--- a/LenguajesProgramacion/apuntes/LP29_08_2024.md
+++ b/LenguajesProgramacion/apuntes/LP29_08_2024.md
@@ -1,3 +1,4 @@
+[<- Índice](../LenguajesProgramacion.md)
 # Expresiones let
 
 - Expresiones básicas (Tipos)
@@ -43,3 +44,7 @@ Por otra parte, la evaluación *perezosa* solo realiza las evaluaciones cuando s
 **Variable ligada**: Son aquellas que dependen de las ligadas.
 
 **Variables libres**: Son aquellas que no dependen de ninguna variable de ligado.
+
+# Enlaces
+
+[<- Anterior](LP26_08_2024.md) | [Siguiente ->](LP30_08_2024.md)
